# tutorial_langchain

./: .env.example  .gitignore  .gitmodules  README.md  chapter10.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  chapter9.ipynb  langsmith_intro.ipynb  pyproject.toml  run_ollama_model.py  sqlite.db
chapter12/: settings.py
chapter12/common/: reflection_manager.py
chapter12/multi_path_plan_generation/: main.py
chapter12/passive_goal_creator/: main.py
chapter12/prompt_optimizer/: main.py
chapter12/response_optimizer/: main.py
chapter12/role_based_cooperation/: main.py
chapter12/self-reflection/: main.py
chapter12/single_path_plan_generation/: main.py
chapter12/tmp/: self_reflection_db.json
documentation_agent/: main.py
tmp/: self_reflection_db.json
