[project]
name = "tutorial-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "gitpython>=3.1.45",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.5.0",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.12",
    "tiktoken==0.7.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
