[project]
name = "tutorial-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "chromadb>=1.2.0",
    "gitpython>=3.1.45",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4",
    "langchain-core>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-tavily>=0.2.12",
    "langchain-text-splitters>=1.0.0",
    "langgraph-checkpoint>=2.1.2",
    "nest-asyncio>=1.6.0",
    "openai>=2.5.0",
    "pygraphviz>=1.14",
    "python-dotenv>=1.1.1",
    "ragas>=0.3.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.1",
    "tavily-python>=0.7.12",
    "tiktoken>=0.7.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
